# tum-cbdp-ex4

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  coordinator.cpp  deploy.sh  groupMembers.txt  worker.cpp
Blob/: AzureBlobClient.cpp  AzureBlobClient.h  BlobClient.h  FilesystemBlobClient.cpp  FilesystemBlobClient.h
Coordinator/: Coordinator.cpp  Coordinator.h
Message/: Message.cpp  Message.h  MessageFactory.cpp  MessageFactory.h  MessageHeartbeat.cpp  MessageHeartbeat.h  MessageMerge.cpp  MessageMerge.h  MessageSplit.cpp  MessageSplit.h  MessageWork.cpp  MessageWork.h
Socket/: Socket.cpp  Socket.h
Worker/: Worker.cpp  Worker.h
tests/: runTest.sh  testResilience.sh  testWorkload.sh
